--- a/src/Pages/Home/Service/Service.css
+++ b/src/Pages/Home/Service/Service.css
@@ -18,4 +18,17 @@ button {
 .service-container button {
     margin: 0 auto;
     display: block;
+    width: 200px;
+    height: 50px;
+    border: none;
+    color: #00887a;
+    background-color: #d3e3fc;
+    border-radius: 4px;
+    text-transform: uppercase;
+    font-weight: 600;
+    font-family: 'Montserrat', sans-serif;
+}
+
+.checkout-btn {
+    text-decoration: none;
 }
