--- a/src/Pages/Login/Login/Login.css
+++ b/src/Pages/Login/Login/Login.css
@@ -1,42 +1,38 @@
 .login-form {
-    height: 100%;
-    width: 100%;
-    background: rgba(0, 0, 0, .5);
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    margin: 0 auto;
+    width: 50%;
+
 
 }
 
-.login-form form {
-    width: 35rem;
+/* .login-form form {
+    width: 300px;
     background-color: #fff;
-    margin: 0 2rem;
-    padding: 1rem 3rem;
-    border-radius: .5rem;
-    box-shadow: 0 .1rem .3rem #333;
+    margin: 20px 20px;
+    padding: 20px;
+    border-radius: 10px;
 
-}
+
+} */
 
 .login-form form h1 {
     font-size: 3rem;
     color: #f39c12;
-    padding: 1rem 0;
+
 
 }
 
 .login-form form .box {
+    display: block;
     width: 100%;
-    padding: 1rem 0;
-    margin: 1rem 0;
-    border-bottom: .2rem solid #666;
+    height: 40px;
+    border-radius: 5px;
+    padding-left: 10px;
+    margin-bottom: 20px;
+
     font-size: 1.6rem;
     color: #333;
     text-transform: none;
     text-decoration: none;
 
-}
-
-.login-form form .box:focus {
-    border-color: #f39c12;
 }
