--- a/src/Pages/Home/Home/Home.css
+++ b/src/Pages/Home/Home/Home.css
@@ -1,5 +1,5 @@
 .main-heading {
-    color: #ffffff;
+    color: #77a6f7;
     font-family: 'Rubik', sans-serif;
     font-size: 70px;
     text-align: center;
