--- a/src/Pages/Home/Home/Home.css
+++ b/src/Pages/Home/Home/Home.css
@@ -1,13 +1,18 @@
 .main-heading {
-    color: #77a6f7;
+
     font-family: 'Rubik', sans-serif;
     font-size: 70px;
     text-align: center;
     margin-bottom: 20px;
+    margin-top: 20px;
 }
 
-hr {
-    width: 100%;
-
-    color: #ffffff;
+.heading-p {
+    height: 400px;
+    font-family: 'Poppins', sans-serif;
+    font-size: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
 }
