--- a/src/Pages/Home/Reviews/Reviews.css
+++ b/src/Pages/Home/Reviews/Reviews.css
@@ -1,8 +1,7 @@
-.services-container {
+.reviews-container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 20px;
-
 }
 
 .font {
@@ -11,13 +10,13 @@
 
 /* made services responsive */
 @media only screen and (max-width:576px) {
-    .services-container {
+    .reviews-container {
         grid-template-columns: repeat(1, 1fr);
     }
 }
 
 @media only screen and (min-width:577px) and (max-width:992px) {
-    .services-container {
+    .reviews-container {
         grid-template-columns: repeat(2, 1fr);
     }
 }
