--- a/src/Pages/Login/Login/Login.css
+++ b/src/Pages/Login/Login/Login.css
@@ -18,7 +18,7 @@
 .login-form form h1 {
     font-size: 3rem;
     color: #f39c12;
-
+    text-align: center;
 
 }
 
@@ -35,4 +35,21 @@
     text-transform: none;
     text-decoration: none;
 
+}
+
+.login-form .login-btn {
+    margin: 0 auto;
+    display: block;
+    background: #333;
+    color: #fff;
+    font-size: 17px;
+    padding: 8px 25px;
+    width: 200px;
+    height: 50px;
+    border: none;
+
+    border-radius: 4px;
+    text-transform: capitalize;
+    font-weight: 600;
+    font-family: 'Montserrat', sans-serif;
 }
