--- a/src/Pages/Login/Register/Register.css
+++ b/src/Pages/Login/Register/Register.css
@@ -1,14 +1,10 @@
 .signup-form {
-    height: 100%;
-    width: 100%;
-    background: rgba(0, 0, 0, .5);
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    margin: 0 auto;
+    width: 50%;
 
 }
 
-.signup-form form {
+/* .signup-form form {
     width: 35rem;
     background-color: #fff;
     margin: 0 2rem;
@@ -16,20 +12,23 @@
     border-radius: .5rem;
     box-shadow: 0 .1rem .3rem #333;
 
-}
+} */
 
 .signup-form form h1 {
     font-size: 3rem;
     color: #f39c12;
-    padding: 1rem 0;
+    text-align: center;
 
 }
 
 .signup-form form .box {
+    display: block;
     width: 100%;
-    padding: 1rem 0;
-    margin: 1rem 0;
-    border-bottom: .2rem solid #666;
+    height: 40px;
+    border-radius: 5px;
+    padding-left: 10px;
+    margin-bottom: 20px;
+
     font-size: 1.6rem;
     color: #333;
     text-transform: none;
@@ -37,6 +36,20 @@
 
 }
 
-.signup-form form .box:focus {
-    border-color: #f39c12;
+.signup-form .btn {
+    margin: 0 auto;
+    display: block;
+    background: #333;
+    color: #fff;
+    font-size: 17px;
+    padding: 8px 25px;
+    width: 200px;
+    height: 50px;
+    border: none;
+    /* color: #00887a;
+    background-color: #d3e3fc; */
+    border-radius: 4px;
+    text-transform: capitalize;
+    font-weight: 600;
+    font-family: 'Montserrat', sans-serif;
 }
