--- a/src/Pages/Login/Social/Social.css
+++ b/src/Pages/Login/Social/Social.css
@@ -1,16 +1,20 @@
-.signout-btn {
+.google-wrapper {
+    display: flex;
+}
+
+.google-auth {
     margin: 0 auto;
     display: block;
     background: #333;
     color: #fff;
-    font-size: 15px;
+    font-size: 17px;
     padding: 8px 25px;
-    width: 150px;
-    height: 40px;
+    width: 200px;
+    height: 50px;
     border: none;
 
     border-radius: 4px;
     text-transform: capitalize;
-    font-weight: 400;
+    font-weight: 600;
     font-family: 'Montserrat', sans-serif;
 }
