--- a/src/Pages/Home/Banner/Banner.css
+++ b/src/Pages/Home/Banner/Banner.css
@@ -1,5 +1,12 @@
+.banner-heading1 {
+    font-family: 'Lato', sans-serif;
+    font-size: 70px;
+    font-weight: 700;
+}
+
 .banner-heading {
+    font-family: 'Lato', sans-serif;
     font-size: 50px;
     font-weight: 600;
-    color: #777;
+    color: #333;
 }
