--- a/src/Pages/Shared/Footer/Footer.css
+++ b/src/Pages/Shared/Footer/Footer.css
@@ -1,7 +1,8 @@
 footer {
-
+    margin-top: 50px;
+    font-family: 'Bebas Neue', cursive;
     bottom: 0;
-    background-color: #2e3b53;
+    background-color: #777;
     width: 100%;
     color: white;
     text-align: center;
