--- a/src/Pages/Login/Login/Login.css
+++ b/src/Pages/Login/Login/Login.css
@@ -1,8 +1,24 @@
-.login-form {
-    margin: 0 auto;
-    width: 50%;
+.login-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    width: 100%;
+}
 
+.form-box {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    width: 400px;
+    height: 550px;
+    padding: 20px;
+    border-radius: 2%;
+    box-shadow: -3px 0px 15px -3px rgba(0, 0, 0, 0.1);
+}
 
+.header-form {
+    margin-top: 16px;
 }
 
 /* .login-form form {
@@ -15,29 +31,21 @@
 
 } */
 
-.login-form form h1 {
-    font-size: 3rem;
-    color: #f39c12;
-    text-align: center;
-
+.header-form h1 {
+    font-size: 2.5rem;
 }
 
-.login-form form .box {
-    display: block;
-    width: 100%;
-    height: 40px;
+.box {
+    border: 1px solid #ccc;
     border-radius: 5px;
-    padding-left: 10px;
+    padding: 10px;
+    font-size: 16px;
+    color: #555;
+    width: 100%;
     margin-bottom: 20px;
-
-    font-size: 1.6rem;
-    color: #333;
-    text-transform: none;
-    text-decoration: none;
-
 }
 
-.login-form .login-btn {
+.login-btn {
     margin: 0 auto;
     display: block;
     background: #333;
@@ -47,7 +55,6 @@
     width: 200px;
     height: 50px;
     border: none;
-
     border-radius: 4px;
     text-transform: capitalize;
     font-weight: 600;
