--- a/src/Pages/Login/Register/Register.css
+++ b/src/Pages/Login/Register/Register.css
@@ -1,42 +1,4 @@
-.signup-form {
-    margin: 0 auto;
-    width: 50%;
-
-}
-
-/* .signup-form form {
-    width: 35rem;
-    background-color: #fff;
-    margin: 0 2rem;
-    padding: 1rem 3rem;
-    border-radius: .5rem;
-    box-shadow: 0 .1rem .3rem #333;
-
-} */
-
-.signup-form form h1 {
-    font-size: 3rem;
-    color: #f39c12;
-    text-align: center;
-
-}
-
-.signup-form form .box {
-    display: block;
-    width: 100%;
-    height: 40px;
-    border-radius: 5px;
-    padding-left: 10px;
-    margin-bottom: 20px;
-
-    font-size: 1.6rem;
-    color: #333;
-    text-transform: none;
-    text-decoration: none;
-
-}
-
-.signup-form .btn {
+.login-btn {
     margin: 0 auto;
     display: block;
     background: #333;
@@ -46,8 +8,6 @@
     width: 200px;
     height: 50px;
     border: none;
-    /* color: #00887a;
-    background-color: #d3e3fc; */
     border-radius: 4px;
     text-transform: capitalize;
     font-weight: 600;
