--- a/src/Pages/Login/Social/Social.css
+++ b/src/Pages/Login/Social/Social.css
@@ -1,20 +1,3 @@
-.google-wrapper {
-    display: flex;
-}
-
-.google-auth {
-    margin: 0 auto;
-    display: block;
-    background: #333;
-    color: #fff;
-    font-size: 17px;
-    padding: 8px 25px;
-    width: 200px;
-    height: 50px;
-    border: none;
-
-    border-radius: 4px;
-    text-transform: capitalize;
-    font-weight: 600;
-    font-family: 'Montserrat', sans-serif;
+.login-btn {
+    height: 100px;
 }
