--- a/src/Pages/CheckOut/CheckOut.css
+++ b/src/Pages/CheckOut/CheckOut.css
@@ -1,4 +1,4 @@
-.checkout-bg {
+/* .checkout-bg {
     font-family: 'Merriweather', serif;
     color: #ffffff;
     padding: 60px;
@@ -19,4 +19,4 @@
     50% {
         background-position: 100% 100%;
     }
-}
+} */
