--- a/src/Pages/Courses/Courses.css
+++ b/src/Pages/Courses/Courses.css
@@ -1,22 +1,34 @@
-.courses-container {
+/* .courses-container {
     min-height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-}
+} */
 
-.courses {
+/* .courses {
     display: flex;
     justify-content: center;
     align-items: center;
     border: 1px solid lightgrey;
+} */
+
+.courses-upside {
+    display: flex;
+    width: 100%;
+    height: 100px;
 }
 
-.courses-upside {}
+.in-progress {
+    display: flex;
+    justify-content: center;
 
-.in-progress {}
+}
 
-.completed {}
+.completed {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
 .courses-card-container {}
 
@@ -29,3 +41,95 @@
 .courses-chapters {}
 
 .courses-progress {}
+
+
+/* Styles for the container */
+.card-container {
+    /* max-width: 20rem; */
+    background-color: #ffffff;
+    padding: 2.5rem 1.5rem;
+    border-radius: 1.5rem;
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1);
+    transform: scale(1);
+    transition: transform 0.5s;
+}
+
+.card-container:hover {
+    transform: scale(1.05);
+}
+
+/* Styles for the title */
+.card-title {
+    margin-bottom: 0.75rem;
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: #4f46e5;
+}
+
+/* Styles for the image */
+.card-image {
+    width: 100%;
+    border-radius: 1.5rem;
+}
+
+/* Styles for the badge */
+.card-badge {
+    position: absolute;
+    top: 0;
+    background-color: #fcd34c;
+    color: #333;
+    font-weight: bold;
+    padding: 0.25rem 0.5rem;
+    border-radius: 0.75rem 0 0 0.75rem;
+}
+
+/* Styles for the course name */
+.card-course-name {
+    margin-top: 1rem;
+    font-size: 1.25rem;
+    font-weight: bold;
+    color: #333;
+    cursor: pointer;
+}
+
+.card-course-category {
+    font-size: 15px;
+}
+
+/* Styles for the time, parts, and content type sections */
+.card-info {
+    margin-top: 0.75rem;
+}
+
+.card-info1 {
+    margin-top: -15px;
+}
+
+.card-info-item {
+    display: flex;
+    align-items: center;
+    margin-bottom: 0.5rem;
+    gap: 5px;
+}
+
+.card-info-item .card-icon {
+    width: 1.2rem;
+    height: 1.2rem;
+    color: #3e36e0;
+    background-color: #cac8f7;
+    margin-bottom: 1rem;
+    padding: 2px 2px;
+    border-radius: 5px;
+}
+
+/* Styles for the button */
+.card-button {
+    margin-top: 1rem;
+    font-size: 1.5rem;
+    width: 100%;
+    color: #fff;
+    background-color: #4f46e5;
+    padding: 0.5rem 1rem;
+    border-radius: 1.5rem;
+    box-shadow: 0 0.5rem 1rem rgba(79, 70, 229, 0.2);
+}
